Fix move button stretch when loading icon appear

--- a/src/stories/buttons/button/styles/Button.module.css
+++ b/src/stories/buttons/button/styles/Button.module.css
@@ -25,8 +25,10 @@
 
 .iconStart {
   display: inherit;
-  margin-right: 4px;
-  margin-left: -4px;
+  /* margin-right: 4px;
+  margin-left: -4px; */
+  width: 1.2em;
+  min-width: 1.2em;
 }
 
 .iconCenter {
@@ -40,4 +42,6 @@
   display: inherit;
   margin-right: -4px;
   margin-left: 4px;
+  width: 1.2em;
+  min-width: 1.2em;
 }
